--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -128,3 +128,35 @@ h2{
     height: 100px;
     width: 100px;
 }
+
+/* Relacionado ao menu inicial */
+#game {
+    display: none;
+}
+#startMenu {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.startMenu {
+    padding: 15px 20px;
+    width: 100%;
+    color: #fff;
+    background-color: #b1000f;
+    border: none;
+    font-size: 1.5em;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+    cursor: pointer;
+    font-weight: 600;
+    border: 1px solid #000;
+    text-shadow: 0px 10px 10px #000;
+    margin: 1rem;
+}
+.startMenu:hover {
+    color: #D01111;
+    background-color: #912626;
+    box-shadow: inset -3px 3px 10px 4px #5a1818;
+}
+
